# docaudit-engine

./: .coverage  .dockerignore  .gitignore  8000)  8081)  Dockerfile  FEATURES.md  README.md  Start Backend.bat  Start DocAudit.bat  analyze_viewer.html  api.py  aurora_adt_output.schema.json  aurora_adt_system_prompt.txt  check_pdf_text_qdrant.py  check_qdrant.py  debug_context_trace.txt  debug_full_log.txt  debug_indexing.py  debug_qa_v3.py  debug_qdrant.py  docker-compose.prod.yml  docker-compose.yml  document_manager.py  feature-template.md  memory_manager.py  pdf_content.txt  read_log.py  recreate_collection.py  requirements-dev.txt  requirements.txt  retry_log.txt  run_backend_debug.bat  setup.py  start.sh  start_all_environments.bat  start_app.bat  start_zrok_headless.bat  sync_chroma_to_qdrant.py  test_local.bat  (+2 more)
core/: adt.py  analysis_engine.py  chat.py  config.py  consolidation.py  document_manager.py  documents.py  hybrid_adapter.py  llm.py  memory.py  normalizer.py  qa_audit_v3.py  router.py  strategies.py  tools.py  vectorstore.py
evals/: README.md
frontend-new/: .env.example  README.md  error.txt  error2.txt  error3.txt  fix-firewall.ps1  index.html  package-lock.json  package.json  vite.config.ts
rag_retrieval/: .env.example  README.md  docker-compose.yml  pyproject.toml
rag_retrieval/examples/: index_and_search.py
rag_retrieval/rag_retrieval/: __init__.py  api.py  bm25_index.py  config.py  lmstudio.py  qdrant_store.py  rerank.py  retriever.py  rrf.py  text_utils.py  types.py
rag_retrieval/tests/: test_retriever.py
scripts/: clean_pdf_chunks.py  (+14 more)
(+147 files in other folders)
